# ic-siwe-react-demo-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  dfx.json  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.tsbuildinfo  tsconfig.json  vite.config.ts
src/backend/: Cargo.toml  backend.did  build.rs
src/backend/declarations/: backend.did  backend.did.d.ts  backend.did.js
src/backend/src/: lib.rs
src/backend/src/service/: get_my_profile.rs  list_profiles.rs  mod.rs  save_my_profile.rs
src/frontend/: index.html
src/frontend/src/: App.tsx  AuthGuard.tsx  index.css  main.tsx
src/frontend/src/components/: AccountDialog.tsx  AddressPill.tsx  ConnectDialog.tsx  GitHubIcon.tsx  PrincipalPill.tsx
src/frontend/src/ic/: Actors.tsx
src/frontend/src/wagmi/: is-chain-id-supported.tsx  wagmi.config.ts
src/react_demo_backend/: Cargo.toml  react_demo_backend.did
src/react_demo_backend/src/: error.rs  lib.rs  session.rs  user_profile.rs
src/react_demo_backend/src/service/: get_my_profile.rs  init_upgrade.rs  mod.rs  save_my_profile.rs
src/react_demo_frontend/: README.md  index.html
src/react_demo_frontend/src/: App.tsx  AuthGuard.tsx  main.tsx  state.tsx
src/react_demo_frontend/src/components/: ActiveSessions.tsx  AddressPill.tsx  AllProfiles.tsx  UserProfile.tsx
src/react_demo_frontend/src/ic/: ActorContext.tsx  ActorProvider.tsx  Actors.tsx  IdentityContext.tsx  IdentityProvider.tsx  SessionContext.tsx  SessionProvider.tsx  actor-context.type.ts  error-response.type.ts  identity-context.type.ts  session.type.ts  (+6 more)
(+33 files in other folders)
