[package]
name = "backend"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.10"
ic-cdk = "0.15.0"
serde = "1.0.208"
serde_json = "1.0.125"
ic-stable-structures = "0.6.5"
serde_bytes = "0.11.15"

[build-dependencies]
ic-cdk-bindgen = "0.1.3"
dotenv = "0.15.0"
