[package]
name = "react_demo_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.9.6"
ic-cdk = "0.11.3"
ic-siwe = { path = "../../../ic-siwe" }
serde = "1.0.193"
serde_json = "1.0.108"
ic-stable-structures = "0.6.0"

#[warn]